# aish

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  cliff.toml  justfile
aish-rs/: Cargo.toml  README.md  rust-toolchain.toml
aish-rs/aish-api/: Cargo.toml  README.md
aish-rs/aish-api/src/: auth.rs  common.rs  error.rs  lib.rs  provider.rs  rate_limits.rs
aish-rs/aish-api/src/endpoint/: chat.rs  compact.rs  models.rs  responses.rs  streaming.rs
aish-rs/aish-api/src/requests/: chat.rs  headers.rs  responses.rs
aish-rs/aish-api/src/sse/: chat.rs  responses.rs
aish-rs/aish-api/tests/: clients.rs  models_integration.rs  sse_end_to_end.rs
aish-rs/aish-client/: Cargo.toml  README.md
aish-rs/aish-client/src/: default_client.rs  lib.rs  transport.rs
aish-rs/ansi-escape/: Cargo.toml
aish-rs/apply-patch/: Cargo.toml
aish-rs/apply-patch/src/: main.rs
aish-rs/apply-patch/tests/suite/: cli.rs  scenarios.rs  tool.rs
aish-rs/arg0/: Cargo.toml
aish-rs/arg0/src/: lib.rs
aish-rs/async-utils/: Cargo.toml
aish-rs/cli/: Cargo.toml
aish-rs/cli/src/: debug_sandbox.rs  lib.rs  main.rs  mcp_cmd.rs
aish-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
aish-rs/common/: Cargo.toml
aish-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  oss.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
aish-rs/core/: Cargo.toml  prompt.md
aish-rs/core/src/: aish.rs  aish_conversation.rs  api_bridge.rs  apply_patch.rs  auth.rs  client.rs  client_common.rs  compact.rs  compact_remote.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  exec_policy.rs  features.rs  flags.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_provider_info.rs  parse_command.rs  powershell.rs  project_doc.rs  safety.rs  seatbelt.rs  spawn.rs  stream_events_utils.rs  token_data.rs  truncate.rs  user_instructions.rs  user_shell_command.rs  util.rs
aish-rs/core/src/command_safety/: is_dangerous_command.rs  is_safe_command.rs  powershell_parser.ps1  windows_safe_commands.rs
aish-rs/core/src/config/: edit.rs  mod.rs  profile.rs  types.rs
aish-rs/core/src/config_loader/: config_requirements.rs  fingerprint.rs  layer_io.rs  macos.rs  mod.rs  state.rs  tests.rs  types.rs
aish-rs/core/src/context_manager/: history.rs  history_tests.rs  normalize.rs
aish-rs/core/src/features/: legacy.rs
aish-rs/core/src/mcp/: auth.rs  mod.rs
aish-rs/core/src/models_manager/: manager.rs  mod.rs  model_family.rs
aish-rs/core/src/rollout/: error.rs  list.rs  mod.rs  policy.rs  recorder.rs  tests.rs
aish-rs/core/src/sandboxing/: mod.rs
aish-rs/core/src/skills/: injection.rs  loader.rs  manager.rs  model.rs  system.rs
aish-rs/core/src/state/: service.rs  session.rs  turn.rs
aish-rs/core/src/tasks/: compact.rs  ghost_snapshot.rs  mod.rs  regular.rs  undo.rs  user_shell.rs
aish-rs/core/src/tools/: context.rs  events.rs  mod.rs  orchestrator.rs  parallel.rs  registry.rs  router.rs  sandboxing.rs  spec.rs
aish-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
aish-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_aish.rs  test_aish_exec.rs
aish-rs/core/tests/suite/: abort_tasks.rs  apply_patch_cli.rs  approvals.rs  cli_stream.rs  client.rs  compact.rs  compact_remote.rs  compact_resume_fork.rs  exec.rs  exec_policy.rs  fork_conversation.rs  grep_files.rs  items.rs  json_result.rs  list_dir.rs  list_models.rs  live_cli.rs  mod.rs  model_overrides.rs  model_tools.rs  prompt_caching.rs  quota_exceeded.rs  read_file.rs  resume.rs  resume_warning.rs  rmcp_client.rs  rollout_list_find.rs  seatbelt.rs  shell_command.rs  shell_serialization.rs  skills.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs  text_encoding_fix.rs  tool_harness.rs  undo.rs  (+6 more)
aish-rs/exec/: Cargo.toml
aish-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  lib.rs  main.rs
aish-rs/exec/tests/: event_processor_with_json_output.rs
aish-rs/execpolicy/: Cargo.toml
aish-rs/execpolicy/src/: main.rs
aish-rs/execpolicy/tests/: basic.rs
aish-rs/file-search/: Cargo.toml
aish-rs/file-search/src/: main.rs
aish-rs/keyring-store/: Cargo.toml
aish-rs/linux-sandbox/: Cargo.toml
aish-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
aish-rs/lmstudio/: Cargo.toml
aish-rs/lmstudio/src/: client.rs  lib.rs
aish-rs/ollama/: Cargo.toml
aish-rs/ollama/src/: client.rs  lib.rs
aish-rs/process-hardening/: Cargo.toml
aish-rs/protocol/: Cargo.toml
aish-rs/protocol/src/: config_types.rs  models.rs  openai_models.rs  protocol.rs
aish-rs/rmcp-client/: Cargo.toml
aish-rs/rmcp-client/src/: auth_status.rs  find_aish_home.rs  lib.rs  oauth.rs  perform_oauth_login.rs
aish-rs/rmcp-client/tests/: resources.rs
aish-rs/stdio-to-uds/: Cargo.toml  README.md
aish-rs/stdio-to-uds/src/: main.rs
aish-rs/stdio-to-uds/tests/: stdio_to_uds.rs
aish-rs/tui/: Cargo.toml
aish-rs/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  diff_render.rs  exec_command.rs  file_search.rs  history_cell.rs  lib.rs  main.rs  oss_selection.rs  pager_overlay.rs  resume_picker.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  text_formatting.rs  version.rs
aish-rs/utils/absolute-path/: Cargo.toml
aish-rs/utils/cache/: Cargo.toml
aish-rs/utils/cargo-bin/: Cargo.toml
aish-rs/utils/git/: Cargo.toml
aish-rs/utils/image/: Cargo.toml
aish-rs/utils/json-to-toml/: Cargo.toml
aish-rs/utils/pty/: Cargo.toml
aish-rs/utils/readiness/: Cargo.toml
aish-rs/utils/string/: Cargo.toml
aish-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
aish-rs/windows-sandbox-rs/src/: allow.rs  audit.rs  command_runner_win.rs  cwd_junction.rs  elevated_impl.rs  lib.rs  policy.rs  read_acl_mutex.rs  setup_main_win.rs  setup_orchestrator.rs  token.rs
(+122 files in other folders)
