[package]
name         = "aish"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.92.0"

[dependencies]
clap          = { version = "4.5", features = ["derive"] }
tokio         = { version = "1.48", features = ["full"] }
toml          = "0.9"
crossterm     = "0.28"
unicode-width = "0.2.2"
