[workspace]
members = [
    "ansi-escape",
    "async-utils",
    "apply-patch",
    "arg0",
    "cli",
    "common",
    "core",
    "exec",
    "execpolicy",
    "keyring-store",
    "file-search",
    "linux-sandbox",
    "lmstudio",
    "mcp-types",
    "ollama",
    "process-hardening",
    "protocol",
    "rmcp-client",
    "stdio-to-uds",
    "tui",
    "utils/absolute-path",
    "utils/cargo-bin",
    "utils/git",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/pty",
    "utils/readiness",
    "utils/string",
    "aish-client",
    "aish-api",
]
resolver = "2"

[workspace.package]
version = "0.0.0"  
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
aish-ansi-escape = { package = "aish-ansi-escape", path = "ansi-escape" }
aish-api = { package = "aish-api", path = "aish-api" }
aish-apply-patch = { package = "aish-apply-patch", path = "apply-patch" }
aish-arg0 = { package = "aish-arg0", path = "arg0" }
aish-async-utils = { package = "aish-async-utils", path = "async-utils" }
aish-client = { package = "aish-client", path = "aish-client" }
aish-common = { package = "aish-common", path = "common" }
aish-core = { package = "aish-core", path = "core" }
aish-exec = { package = "aish-exec", path = "exec" }
aish-execpolicy = { package = "aish-execpolicy", path = "execpolicy" }
aish-file-search = { package = "aish-file-search", path = "file-search" }
aish-git = { package = "aish-git", path = "utils/git" }
aish-keyring-store = { package = "aish-keyring-store", path = "keyring-store" }
aish-linux-sandbox = { package = "aish-linux-sandbox", path = "linux-sandbox" }
aish-lmstudio = { package = "aish-lmstudio", path = "lmstudio" }
aish-ollama = { package = "aish-ollama", path = "ollama" }
aish-process-hardening = { package = "aish-process-hardening", path = "process-hardening" }
aish-protocol = { package = "aish-protocol", path = "protocol" }
aish-rmcp-client = { package = "aish-rmcp-client", path = "rmcp-client" }
aish-stdio-to-uds = { package = "aish-stdio-to-uds", path = "stdio-to-uds" }
aish-tui = { package = "aish-tui", path = "tui" }
aish-utils-absolute-path = { package = "aish-utils-absolute-path", path = "utils/absolute-path" }
aish-utils-cache = { package = "aish-utils-cache", path = "utils/cache" }
aish-utils-cargo-bin = { package = "aish-utils-cargo-bin", path = "utils/cargo-bin" }
aish-utils-image = { package = "aish-utils-image", path = "utils/image" }
aish-utils-readiness = { package = "aish-utils-readiness", path = "utils/readiness" }
aish-utils-string = { package = "aish-utils-string", path = "utils/string" }
core_test_support = { path = "core/tests/common" }
mcp-types = { path = "mcp-types" }
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.43"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ctor = "0.5.0"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.4"
encoding_rs = "0.8.35"
env-flags = "0.1.1"
escargot = "0.5"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
http = "1.3.1"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.23"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7.4"
indexmap = "2.12.0"
insta = "1.46.1"
itertools = "0.14.0"
keyring = { version = "3.6", default-features = false }
landlock = "0.4.4"
lazy_static = "1"
libc = "0.2.180"
log = "0.4"
lru = "0.16.2"
maplit = "1.0.2"
mime_guess = "2.0.5"
multimap = "0.10.0"
notify = "8.2.0"
nucleo-matcher = "0.3.1"
once_cell = "1.20.2"
openssl-sys = "*"
os_info = "3.12.0"
owo-colors = "4.2.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13"
rand = "0.9"
ratatui = "0.29.0"
regex = "1.12.2"
regex-lite = "0.1.7"
reqwest = "0.12"
rmcp = { version = "0.12.0", default-features = false }
schemars = "0.8.22"
seccompiler = "0.5.0"
serde = "1"
serde_json = "1"
serde_with = "3.16"
serde_yaml = "0.9"
serial_test = "3.3.1"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
similar = "2.7.0"
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
sys-locale = "0.3.2"
tempfile = "3.23.0"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.17"
time = "0.3"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.17"
tokio-test = "0.4"
tokio-util = "0.7.16"
toml = "0.9.5"
toml_edit = "0.23.5"
tracing = "0.1.43"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.25.10"
ts-rs = "11"
uds_windows = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "8"
wildmatch = "2.6.1"

wiremock = "0.6"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = ["icu_provider", "openssl-sys"]

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

[patch.crates-io]
# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }
