[package]
name = "aish-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aish_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
aish-apply-patch = { workspace = true }
aish-core = { workspace = true }
aish-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
