[package]
name = "aish-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aish"
path = "src/main.rs"

[lib]
name = "aish_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
aish-arg0 = { workspace = true }
aish-common = { workspace = true, features = ["cli"] }
aish-core = { workspace = true }
aish-exec = { workspace = true }
aish-execpolicy = { workspace = true }
aish-process-hardening = { workspace = true }
aish-protocol = { workspace = true }
aish-rmcp-client = { workspace = true }
aish-stdio-to-uds = { workspace = true }
aish-tui = { workspace = true }
ctor = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
aish-utils-cargo-bin = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
