[package]
name = "aish-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
aish-core = { workspace = true }
aish-lmstudio = { workspace = true }
aish-ollama = { workspace = true }
aish-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []

[dev-dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
pretty_assertions = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
