[package]
name = "aish-file-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aish-file-search"
path = "src/main.rs"

[lib]
name = "aish_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
