[package]
name = "aish-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aish-linux-sandbox"
path = "src/main.rs"

[lib]
name = "aish_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aish-core = { workspace = true }
aish-protocol = { workspace = true }
aish-utils-absolute-path = { workspace = true }
clap = { workspace = true, features = ["derive"] }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
